syntax = "proto3";

package sums;

message Sums {
    int32 first = 1;
    int32 second = 2;
}

message SumsRequest {
    Sums numbersToAdd = 1;
}

message SumsResponse {
    int32 result = 1;
}

service SumsService {
    rpc Sums (SumsRequest) returns (SumsResponse) {}
}